Disable async and fix weird word wrap on slogan

--- a/static/styles/manhood.css
+++ b/static/styles/manhood.css
@@ -28,6 +28,7 @@ body {
 	text-align: center;
 	font-size: 1.5em;
 	line-height: 1.3;
+	white-space: nowrap;
 }
 
 .slogan .simple {
